# pre-HottoCoffee

./: .editorconfig  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yaml  compose.yaml
.github/: dependabot.yaml  label-path-mapping.yaml  labeler.yaml
.github/workflows/: backend-integration-test.yaml  build-backend.yaml  build-front.yaml  (+9 more)
back/: compose.yaml
backend/: README.md
backend/rust/: Cargo.toml
backend/rust/.sqlx/: query-27627e68d3f309ada10d79bafd76797ca921e330f688be8610b4dcd4aa55a218.json  query-67cbda02e0d045bb61f9aa168f3779a3db5c9db041f88e07d1629f6c20830ecc.json
backend/rust/migrations/: 20230723140811_user.sql
backend/rust/src/: adopter.rs  authorization_layer.rs  entity.rs  infra.rs  main.rs  service_locator.rs
backend/rust/src/adaptor/: user_controller.rs
backend/rust/src/adopter/: error_response.rs  jwt_claims.rs  user_controller.rs
backend/rust/src/entity/domain/: user.rs
backend/rust/src/entity/repository/: user_repository.rs
backend/rust/src/infra/: repository.rs  util.rs
backend/rust/src/infra/repository/: dummy_user_repository.rs  user_repository_db_client.rs
backend/rust/src/infra/util/: cryptor.rs  hashed_password.rs
backend/rust/src/service/: user_service.rs
front/: .eslintrc.js  .gitignore  .stylelintrc.json  cspell.json  package-lock.json  package.json  tsconfig.json
frontend/: .env.sample  .eslintrc.js  .gitignore  .stylelintrc.json  Dockerfile  cspell.json  next.config.js  package-lock.json  package.json  tsconfig.json
schema/: main.yaml
swagger/: .firebaserc
(+283 files in other folders)
