[package]
name = "hottocoffee"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4.26"
sqlx = { version = "0.7.1", features = ["mysql", "runtime-tokio-rustls", "chrono"] }
jsonwebtoken = "8.3.0"
async-trait = "0.1.72"
