[package]
name = "hottocoffee"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { features = ["derive"] }
axum = "0.6.18"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3.17"
chrono = "0.4.26"
sqlx = { version = "0.7.1", features = ["mysql", "runtime-tokio-rustls", "chrono"] }
jsonwebtoken = "8.3.0"
async-trait = "0.1.72"
bcrypt = "0.15.0"
derive-new = "0.5.9"
crypter = "0.1.1"
aes-gcm = "0.9"
sha2 = "0.9"
typenum = "1.16.0"
